Fixed hyperlink alignment in project section descriptions

--- a/src/page/projects/projects-page.module.css
+++ b/src/page/projects/projects-page.module.css
@@ -38,6 +38,9 @@
 
 	font-size: 0.95em;
 }
+.project-type-description * {
+	display: inline;
+}
 .projects-div {
 	width: 100%;
 
